themes/Adwaita/gtk-3.0/gtk.css
/* ... */
.background {
    /* I like this huge gradient, but probably it would be better
    to have a fixed height gradient, not sure.*/
    /*background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (shade (@bg_color, 0.94)),
				     to (@bg_color)); */
    border-style: none;
    border-width: 0;
    border-radius: 0;
}

/* Text Entries */
.entry {
    background-color: #fff;
    background-image: none;
    border-color: #579eea;
    border-radius: 3;
    border-width: 1;
    border-style: solid;
}

.entry:insensitive {
    background-color: #f4f4f2;
    border-color: #bcbfb7;
}

GtkSpinButton.button,
GtkSpinButton.button:insensitive,
GtkSpinButton.button:prelight,
GtkSpinButton.button:active {
    background-image: none;
    background-color: #fff;
    border-width: 1;
    border-style: none;
    padding: 0;
}

GtkFrame,
GtkCalendar,
GtkScale {
    padding: 2;
}

.frame {
    font: bold;
    color: lighter (@fg_color);
    border-style: none;
    border-width: 0;
}

.cell {
    background-color: @base_color;
    color: @text_color;
}

.cell:selected {
    background-color: @selected_bg_color;
}

/* Notebooks/Tabs */

GtkNotebook,
.notebook {
    -adwaita-selected-tab-color: #8dc0f3;
    background-color: shade (@bg_color, 1.12);
    padding: 3;
    border-style: solid;
    border-radius: 0;
    -GtkNotebook-tab-overlay: 10;
    -GtkNotebook-tab-curvature: 5;
}

GtkNotebook tab {
    padding: 2;
    border-radius: 2;
}

  GtkNotebook tab:active {
      background-color: @base_color;
  }

/* Scrollbars */

GtkScrollbar {
    padding: 1; /* ??? */
    background-image: none;
    -GtkRange-arrow-scaling: 0.6;
    -GtkRange-slider-width: 18; /* seems affect the whole width of the scrollbar */
    -GtkRange-stepper-size: 20; /* height on vertical and width on horizontal siders */
    -GtkScrollbar-min-slider-length: 30; /* minimum size for the slider. sadly can't be in '.slider' where it belongs */
}

GtkScrollbar.trough {
    background-color: shade (@bg_color, 0.9);
    border-width: 0;
    border-radius: 0;
    /* non uniform borders don't work
    border: 1px solid @frame_color;
    border-left: 1px solid shade (@bg_color, 0.9);
    */
}

GtkScrollbar.slider, GtkScrollbar.button {
    background-image: none;
    background-color: lighter (@bg_color);
    border-color: #a7aba7;
    border-width: 1;
    border-radius: 3;
    padding: 0;
}

GtkScrollbar.slider:prelight,
GtkScrollbar.button:prelight {
    background-image: none;
    background-color: lighter (@bg_color);
    border-color: @frame_color;
}

GtkScrollbar.slider:prelight:active,
GtkScrollbar.button:prelight:active {
    background-image: none;
    border-color: @selected_bg_color;
}

/* Buttons */
.button {
    padding: 3;

    border-radius: 3;
    border-width: 1;
    border-color: #a7aba7;
    border-style: solid;

    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (shade (@bg_color, 1.06)),
				     to (shade (@bg_color, 0.95)));
}

.button:hover {
    border-color: #a7aba7;
    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (#fff),
				     to (#e5e7e5));
}

.button:hover:active,
.toolbar .button:hover:active {
    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (#a2a9a2),
				     to (alpha (#878f87, 0.125)));
    border-color: #8a8f8a;
}

.button:insensitive {
    background-image: none;
    background-color: #f4f4f2;
    color: #a7aba7;
}

.toolbar .button:prelight {
    background-image: -gtk-gradient (linear,
                                     left top, left bottom,
                                     from (#f4f6f4),
                                     to (#d7dad7));
    border-style: solid;
    border-radius: 3;
    border-width: 1;
    border-color: #a7aba7;
}

.button.default {
    border-width: 2;
}

GtkStatusbar {
    padding: 5;
    color: @fg_color;
    -GtkStatusbar-shadow-type: none;
}

.menubar {
    background-image: -gtk-gradient (linear,
				     left top, left bottom,
				     from (@bg_color),
				     color-stop (0.45, shade (@bg_color, 0.97)),
				     to (shade (@bg_color, 0,99));
    border-style: none;
    padding: 4;
    border-width: 0;

    -GtkWidget-window-dragging: true;
}

.menubar *:prelight {
    background-image: none;
    background-color: shade (@bg_color, 1.12);
    border-style: solid;
    border-width: 1;
    /* border-radius: 4; */
    border-color: shade (@bg_color, 0.7);
}

.menu {
    padding: -1;
    background-color: shade (@bg_color, 1.12);
    border-style: solid;
    border-width: 1;
    border-color: shade (@bg_color, 0.7);
    border-radius: 0; /* No argb visuals by default 0, it would have been nice to have it something like 4*/
    -GtkMenuItem-arrow-scaling: 0.4;
}

.menu *:active,
.menu *:prelight {
    background-image: -gtk-gradient (linear,
				     left top,
				     left bottom,
				     from (shade (@selected_bg_color, 1.3)),
				     color-stop (0.05, shade (@selected_bg_color, 0.95)),
				     color-stop (0.4, @selected_bg_color),
				     to @selected_bg_color);
    /* background-color: @selected_bg_color; */
    color: @selected_fg_color;
    border-style: solid;
    border-width: 1;
    border-radius: 0;
    border-color: darker (@selected_bg_color);
    padding: 0;
}

.menu.separator {
    padding: 1 0;
    -GtkSeparatorMenuItem-horizontal-padding: 0;
    -GtkWidget-wide-separators: 1;
    -GtkWidget-separator-width: 1;
    -GtkWidget-separator-height: 7;
}

.check,
.radio,
.check:active,
.radio:active,
.menu .check,
.menu .radio,
.menu .check:hover,
.menu .radio:hover,
.menu .check:active,
.menu .radio:active {
    background-color: @base_color;
    color: @text_color;
}

GtkCheckButton:prelight,
GtkRadioButton:prelight,
GtkCheckButton:selected,
GtkRadioButton:selected {
    background-color: shade (@bg_color, 1.1);
}




.progressbar {
    padding: 0;
    border-radius: 3;
}
/* ... */

